# autogbusiness

./: .env.docker.example  .gitattributes  .gitignore  PLAN.md  README.md  docker-compose.yml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init.py  0002_token_version.py  0003_workspace_member_invite.py  0004_queue_progress.py  0005_workspace_connected_user.py  0006_workspace_billing.py  0007_workspace_billing_invoices.py  0008_ui_labels.py  0009_member_subscription.py  0010_backfill_sub.py  0011_workspace_assignments.py  0012_workspace_verified_domain.py  0013_member_payment.py  0014_member_license_type.py  0015_member_last_invited_at.py  0016_backfill_member_remove_perm.py  0017_user_sync_member_cooldown.py  0018_user_command_ban.py
apps/api/app/: audit.py  config.py  db.py  deps.py  main.py  models.py  permissions.py  schemas.py  security.py  seed.py  sse.py
apps/api/app/routers/: added_members.py  audit_logs.py  auth.py  members.py  queue.py  ui_labels.py  users.py  workspaces.py
apps/api/app/routers/members/: __init__.py  _shared.py  invite.py  ownership.py  reconcile.py  remove.py  role_license.py  (+2 more)
apps/api/tests/: conftest.py  test_added_members.py  test_bulk_remove.py  test_bulk_upsert_chunked_reconcile.py  test_invite_demo_two_emails.py  test_invite_logic.py  test_invite_reconcile.py  test_license_type.py  test_progress_history.py  test_queue_rail_visibility.py  test_sync_member.py  test_token_version.py  test_workspace_assignment.py  test_workspace_member.py
(+252 files in other folders)
